--- a/src/main/resources/templates/categoria/modifica.html
+++ b/src/main/resources/templates/categoria/modifica.html
@@ -6,10 +6,7 @@
     <body>
         <header th:replace="layout/plantilla :: header"></header>
         
-        <section th:replace = "categoria/fragmentos :: botonesAgregar"/>
-        <section th:replace = "categoria/fragmentos :: listadoCategorias"/>
-        <section th:replace = "categoria/fragmentos :: agregarCategoria"/>
-
+        <section th:replace = "categoria/fragmentos :: editarCategoria"/> <!--el fragmento 4 importa el 5 en fragmentos -->
 
 
         <footer th:replace="layout/plantilla :: footer"></footer>
